fix markdown images

--- a/starting_kit/README.ipynb
+++ b/starting_kit/README.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background:#FFFFFF\">\n",
-    "<img src=\"../images/dataset-cover.jpg\" width=150 ALIGN=\"left\" style='margin-right:10px; border-style: solid; border-width: 2px;' alt='logo'/>\n",
+    "<img src=\"dataset-cover.jpg\" width=150 ALIGN=\"left\" style='margin-right:10px; border-style: solid; border-width: 2px;' alt='logo'/>\n",
     "<h1>Starting Kit - Style-Trans-Fair </h1>\n",
     "<p>\n",
     "This starting kit will guide you step by step and will walk you through the data statistics and<br>\n",
@@ -48,7 +48,7 @@
     "\n",
     "\n",
     "<center>\n",
-    "<img src=\"../images/task_distribution.png\" width=\"1200\"/>\n",
+    "<img src=\"task_distribution.png\" width=\"1200\"/>\n",
     "</center>\n",
     "\n",
     "where the training set is biased in Style, and the test set is balanced.\n",
