fix markdown images

--- a/starting_kit/README.ipynb
+++ b/starting_kit/README.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "<div style=\"background:#FFFFFF\">\n",
-    "<img src=\"dataset-cover.jpg\" width=150 ALIGN=\"left\" style='margin-right:10px; border-style: solid; border-width: 2px;' alt='logo'/>\n",
+    "<img src=\"logo.jpg\" width=150 ALIGN=\"left\" style='margin-right:10px; border-style: solid; border-width: 2px;' alt='logo'>\n",
+    "\n",
     "<h1>Starting Kit - Style-Trans-Fair </h1>\n",
     "<p>\n",
     "This starting kit will guide you step by step and will walk you through the data statistics and<br>\n",
