fix image markdown

--- a/starting_kit/README.ipynb
+++ b/starting_kit/README.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background:#FFFFFF\">\n",
-    "<img src=\"logo.jpg\" width=150 ALIGN=\"left\" style='margin-right:10px; border-style: solid; border-width: 2px;' alt='logo'>\n",
+    "<img src=\"logo.jpg\">\n",
     "\n",
     "<h1>Starting Kit - Style-Trans-Fair </h1>\n",
     "<p>\n",
