--- a/starting_kit/README.ipynb
+++ b/starting_kit/README.ipynb
@@ -46,7 +46,7 @@
     "This challenge uses a Dataset from ***Meta Album***. There are 5 tasks in the Development phase and 5 tasks in the Final Phase.\n",
     "Each task in the dataset consists of **360** images splited into 9 groups:\n",
     "\n",
-    "\n",
+    "![Help1](../images/task_distribution.png)\n",
     "<center>\n",
     "<img src=\"../images/task_distribution.png\" width=\"1200\" height=\"500\">\n",
     "</center>\n",
