--- a/starting_kit/README.ipynb
+++ b/starting_kit/README.ipynb
@@ -45,8 +45,12 @@
     "\n",
     "This challenge uses a Dataset from ***Meta Album***. There are 5 tasks in the Development phase and 5 tasks in the Final Phase.\n",
     "Each task in the dataset consists of **360** images splited into 9 groups:\n",
+    "<p>\n",
+    "    <img src=\"logo.jpg\" width=\"220\" height=\"240\" />\n",
+    "</p>\n",
     "\n",
     "![Kernel & front-end diagram](./logo.jpg)\n",
+    "\n",
     "<center>\n",
     "<img src=\"../images/task_distribution.png\" width=\"1200\" height=\"500\">\n",
     "</center>\n",
