--- a/starting_kit/README.ipynb
+++ b/starting_kit/README.ipynb
@@ -46,7 +46,7 @@
     "This challenge uses a Dataset from ***Meta Album***. There are 5 tasks in the Development phase and 5 tasks in the Final Phase.\n",
     "Each task in the dataset consists of **360** images splited into 9 groups:\n",
     "<p>\n",
-    "    <img src=\"logo.jpg\" width=\"220\" height=\"240\" />\n",
+    "    <img src=\"../logo.jpg\" width=\"220\" height=\"240\" />\n",
     "</p>\n",
     "\n",
     "![Kernel & front-end diagram](./logo.jpg)\n",
