--- a/starting_kit/README.ipynb
+++ b/starting_kit/README.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background:#FFFFFF\">\n",
-    "<img src=\"../images/dataset-cover.jpg\" width=150 ALIGN=\"left\" style='margin-right:10px; border-style: solid; border-width: 2px;' alt='logo'>\n",
+    "<!-- <img src=\"../images/dataset-cover.jpg\" width=150 ALIGN=\"left\" style='margin-right:10px; border-style: solid; border-width: 2px;' alt='logo'> -->\n",
     "<h1>Starting Kit - Style-Trans-Fair </h1>\n",
     "<p>\n",
     "This starting kit will guide you step by step and will walk you through the data statistics and<br>\n",
@@ -45,25 +45,6 @@
     "\n",
     "This challenge uses a Dataset from ***Meta Album***. There are 5 tasks in the Development phase and 5 tasks in the Final Phase.\n",
     "Each task in the dataset consists of **360** images splited into 9 groups:\n",
-    "\n",
-    "\n",
-    "\n",
-    "<p>\n",
-    "    <img src=\"../logo.jpg\" width=\"220\" height=\"240\" />\n",
-    "</p>\n",
-    "\n",
-    "\n",
-    "\n",
-    "![Kernel & front-end diagram](./logo.jpg)\n",
-    "\n",
-    "\n",
-    "<center>\n",
-    "\n",
-    "<img src=\"../images/task_distribution.png\" width=\"1200\" height=\"500\">\n",
-    "</center>\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "where the training set is biased in Style, and the test set is balanced.\n",
