--- a/starting_kit/README.ipynb
+++ b/starting_kit/README.ipynb
@@ -46,6 +46,9 @@
     "This challenge uses a Dataset from ***Meta Album***. There are 5 tasks in the Development phase and 5 tasks in the Final Phase.\n",
     "Each task in the dataset consists of **360** images splited into 9 groups:\n",
     "\n",
+    "<p>\n",
+    "<img src=\"../images/task_distribution.png\">\n",
+    "</p>\n",
     "\n",
     "where the training set is biased in Style, and the test set is balanced.\n",
     "\n",
