Tensorflow GPU guideline

--- a/README.ipynb
+++ b/README.ipynb
@@ -262,6 +262,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Attention: \n",
+    "\n",
+    "The starting baseline is using a convolution neural network built with tensorflow. For the participants who want to use the GPU, you will need to install additonal dependencies depending on the operating system you use. Here are some guidelines depending on your OS preference: \n",
+    "\n",
+    "\n",
+    "***\n",
+    "<b>Windows</b> : https://machinelearningprojects.net/install-tensorflow-with-cuda-and-cudnn/\n",
+    "\n",
+    "<b>Linux</b> : https://www.tensorflow.org/install/pip\n",
+    "\n",
+    "<b>MacOS</b> : https://medium.com/mlearning-ai/install-tensorflow-on-mac-m1-m2-with-gpu-support-c404c6cfb580\n",
+    "***"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
