update competition upgrade

--- a/README.ipynb
+++ b/README.ipynb
@@ -1786,6 +1786,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Beside the scores provided below, you also have access to the confusion matrix, group accuracies matrix, etc in the scoring_output/ folder.\n",
+    "As for the submission on Codabench, you can download \"Output from scoring step\" to get these info in the scores.html file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
