--- a/README.ipynb
+++ b/README.ipynb
@@ -5,34 +5,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"background:#FFFFFF\">\n",
-    "<img src=\"images/dark_logo.jpg\" width=150 ALIGN=\"left\" style='margin-right:10px; border-style: solid; border-width: 2px;' alt='logo'>\n",
-    "<h1>Starting Kit - Style-Trans-Fair </h1>\n",
+    "<div>\n",
+    "<div>\n",
+    "<img src=\"https://raw.githubusercontent.com/fnachalearn/style-trans-fair/main/images/dark_logo.jpg\" width=150 ALIGN=\"left\" style='margin-right:10px; border-style: solid; border-width: 2px;' alt='FNA LOGO'>\n",
+    "<h1>Starting Kit // <b>Style-Trans-Fair</b> </h1>\n",
     "<p>\n",
-    "This starting kit will guide you step by step and will walk you through the data statistics and<br>\n",
-    "examples. This will give you a clear idea of what this challenge is about and how you can<br>\n",
-    "proceed further to solve the challenge.\n",
-    "</p>\n",
-    "\n",
-    "<br><br>\n",
-    "<hr style='background-color: #D3D3D3; height: 1px; border: 0;'>\n",
-    "<p>\n",
-    "This code was tested with Python 3.8.5 |Anaconda custom (64-bit)| (default, Dec 23 2020, 21:19:02) (https://anaconda.org/)<br>\n",
-    "</p>\n",
-    "<hr style='background-color: #D3D3D3; height: 1px; border: 0;'>\n",
-    "    \n",
-    "<p>\n",
-    "ALL INFORMATION, SOFTWARE, DOCUMENTATION, AND DATA ARE PROVIDED \"AS-IS\". The CHALEARN, AND/OR OTHER ORGANIZERS OR CODE AUTHORS DISCLAIM ANY EXPRESSED OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR ANY PARTICULAR PURPOSE, AND THE WARRANTY OF NON-INFRIGEMENT OF ANY THIRD PARTY'S INTELLECTUAL PROPERTY RIGHTS. IN NO EVENT SHALL AUTHORS AND ORGANIZERS BE LIABLE FOR ANY SPECIAL, \n",
-    "INDIRECT OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF SOFTWARE, DOCUMENTS, MATERIALS, PUBLICATIONS, OR INFORMATION MADE AVAILABLE FOR THE CHALLENGE. \n",
-    "</p>\n",
-    "\n",
-    "<hr style='background-color: #D3D3D3; height: 1px; border: 0;'>\n",
-    "    <p>\n",
-    "This challenge was organized by <b>Team Fairness National Assembly</b> of <b><a style='color:#4D6605;' href='http://www.chalearn.org/'>ChaLearn</a></b>  at <b><a style='color: #62023C;' href='https://www.universite-paris-saclay.fr/'>Université Paris Saclay</a></b>\n",
-    "</p>\n",
+    "This starting kit will guide you step by step and will walk you through the data statistics and examples. This will give you a clear idea of what this challenge is about and how you can proceed further to solve the challenge.\n",
+    "</p> \n",
     "</div>\n",
+    "<div>\n",
+    "<br/><br/>\n",
+    "<details>\n",
+    "<summary>Technical Details</summary>\n",
+    "<p>\n",
+    "This code was tested with <a href=\"https://www.python.org/downloads/release/python-385/\">Python 3.8.5</a> | <a href=\"https://anaconda.org/\">Anaconda</a> custom (64-bit) | (default, Dec 23 2020, 21:19:02).\n",
+    "</p>\n",
+    "</details>\n",
     "\n",
-    "<hr style='background-color: #D3D3D3; height: 1px; border: 0;'>"
+    "<details> \n",
+    "<summary>Disclaimer</summary>\n",
+    "  <p>\n",
+    "  ALL INFORMATION, SOFTWARE, DOCUMENTATION, AND DATA ARE PROVIDED \"AS-IS\". The CHALEARN, AND/OR OTHER ORGANIZERS OR CODE AUTHORS DISCLAIM ANY EXPRESSED OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR ANY PARTICULAR PURPOSE, AND THE WARRANTY OF NON-INFRIGEMENT OF ANY THIRD PARTY'S INTELLECTUAL PROPERTY RIGHTS. IN NO EVENT SHALL AUTHORS AND ORGANIZERS BE LIABLE FOR ANY SPECIAL, \n",
+    "  INDIRECT OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF SOFTWARE, DOCUMENTS, MATERIALS, PUBLICATIONS, OR INFORMATION MADE AVAILABLE FOR THE CHALLENGE. \n",
+    "  </p>\n",
+    "</details>\n",
+    "<details> \n",
+    "<summary>References and Credits </summary>\n",
+    "  <p>\n",
+    "  <ul>\n",
+    "      <li><a href=\"https://meta-album.github.io/\">Meta Album</a></li>\n",
+    "      <li><a href=\"https://www.universite-paris-saclay.fr/\">Université Paris Saclay</a></li>\n",
+    "      <li><a href=\"http://www.chalearn.org/\">ChaLearn</a></li>\n",
+    "  </ul>\n",
+    "  </p>\n",
+    "</details> \n",
+    "\n",
+    "<details open> \n",
+    "<summary>Collaborators</summary>\n",
+    "  <p>\n",
+    "This challenge was organized by <b>Team Fairness National Assembly</b> of <b><a style='color:#4D6605;' href='http://www.chalearn.org/'>ChaLearn</a></b> at <b><a style='color: #62023C;' href='https://www.universite-paris-saclay.fr/'>Université Paris Saclay</a></b>\n",
+    "  </p>\n",
+    "</details> \n",
+    "</div>\n",
+    "<hr>\n",
+    "\n",
+    "<center>\n",
+    "<button type=\"button\" ><h3><a href=\"https://www.codabench.org/competitions/601/\" style=\"color:red;\">Competition Site</a></h3></button> \n",
+    "<button type=\"button\"><h3><a href=\"mailto:fna@chalearn.org\">Contact us</a></h3></button>\n",
+    "</center>\n",
+    "<hr>\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notebook also available on [Google Colab](https://colab.research.google.com/drive/1sXOEQMEM8vkWRKDqkTtFc-Mvv6Ffm3M0?usp=sharing)"
    ]
   },
   {
@@ -1863,13 +1893,6 @@
     "# zipdir(sample_result_submission, result_dir)\n",
     "print(\"Submit this file to codalab:\\n\" + sample_code_submission)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
