--- a/README.ipynb
+++ b/README.ipynb
@@ -5,34 +5,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"background:#FFFFFF\">\n",
-    "<img src=\"images/dark_logo.jpg\" width=150 ALIGN=\"left\" style='margin-right:10px; border-style: solid; border-width: 2px;' alt='logo'>\n",
-    "<h1>Starting Kit - Style-Trans-Fair </h1>\n",
+    "<div>\n",
+    "<div>\n",
+    "<img src=\"https://raw.githubusercontent.com/fnachalearn/style-trans-fair/main/images/dark_logo.jpg\" width=150 ALIGN=\"left\" style='margin-right:10px; border-style: solid; border-width: 2px;' alt='FNA LOGO'>\n",
+    "<h1>Starting Kit // <b>Style-Trans-Fair</b> </h1>\n",
     "<p>\n",
-    "This starting kit will guide you step by step and will walk you through the data statistics and<br>\n",
-    "examples. This will give you a clear idea of what this challenge is about and how you can<br>\n",
-    "proceed further to solve the challenge.\n",
-    "</p>\n",
-    "\n",
-    "<br><br>\n",
-    "<hr style='background-color: #D3D3D3; height: 1px; border: 0;'>\n",
-    "<p>\n",
-    "This code was tested with Python 3.8.5 |Anaconda custom (64-bit)| (default, Dec 23 2020, 21:19:02) (https://anaconda.org/)<br>\n",
-    "</p>\n",
-    "<hr style='background-color: #D3D3D3; height: 1px; border: 0;'>\n",
-    "    \n",
-    "<p>\n",
-    "ALL INFORMATION, SOFTWARE, DOCUMENTATION, AND DATA ARE PROVIDED \"AS-IS\". The CHALEARN, AND/OR OTHER ORGANIZERS OR CODE AUTHORS DISCLAIM ANY EXPRESSED OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR ANY PARTICULAR PURPOSE, AND THE WARRANTY OF NON-INFRIGEMENT OF ANY THIRD PARTY'S INTELLECTUAL PROPERTY RIGHTS. IN NO EVENT SHALL AUTHORS AND ORGANIZERS BE LIABLE FOR ANY SPECIAL, \n",
-    "INDIRECT OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF SOFTWARE, DOCUMENTS, MATERIALS, PUBLICATIONS, OR INFORMATION MADE AVAILABLE FOR THE CHALLENGE. \n",
-    "</p>\n",
-    "\n",
-    "<hr style='background-color: #D3D3D3; height: 1px; border: 0;'>\n",
-    "    <p>\n",
-    "This challenge was organized by <b>Team Fairness National Assembly</b> of <b><a style='color:#4D6605;' href='http://www.chalearn.org/'>ChaLearn</a></b>  at <b><a style='color: #62023C;' href='https://www.universite-paris-saclay.fr/'>Université Paris Saclay</a></b>\n",
-    "</p>\n",
+    "This starting kit will guide you step by step and will walk you through the data statistics and examples. This will give you a clear idea of what this challenge is about and how you can proceed further to solve the challenge.\n",
+    "</p> \n",
     "</div>\n",
+    "<div>\n",
+    "<br/><br/>\n",
+    "<details>\n",
+    "<summary>Technical Details</summary>\n",
+    "<p>\n",
+    "This code was tested with <a href=\"https://www.python.org/downloads/release/python-385/\">Python 3.8.5</a> | <a href=\"https://anaconda.org/\">Anaconda</a> custom (64-bit) | (default, Dec 23 2020, 21:19:02).\n",
+    "</p>\n",
+    "</details>\n",
     "\n",
-    "<hr style='background-color: #D3D3D3; height: 1px; border: 0;'>"
+    "<details> \n",
+    "<summary>Disclaimer</summary>\n",
+    "  <p>\n",
+    "  ALL INFORMATION, SOFTWARE, DOCUMENTATION, AND DATA ARE PROVIDED \"AS-IS\". The CHALEARN, AND/OR OTHER ORGANIZERS OR CODE AUTHORS DISCLAIM ANY EXPRESSED OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR ANY PARTICULAR PURPOSE, AND THE WARRANTY OF NON-INFRIGEMENT OF ANY THIRD PARTY'S INTELLECTUAL PROPERTY RIGHTS. IN NO EVENT SHALL AUTHORS AND ORGANIZERS BE LIABLE FOR ANY SPECIAL, \n",
+    "  INDIRECT OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF SOFTWARE, DOCUMENTS, MATERIALS, PUBLICATIONS, OR INFORMATION MADE AVAILABLE FOR THE CHALLENGE. \n",
+    "  </p>\n",
+    "</details>\n",
+    "<details> \n",
+    "<summary>References and Credits </summary>\n",
+    "  <p>\n",
+    "  <ul>\n",
+    "      <li><a href=\"https://meta-album.github.io/\">Meta Album</a></li>\n",
+    "      <li><a href=\"https://www.universite-paris-saclay.fr/\">Université Paris Saclay</a></li>\n",
+    "      <li><a href=\"http://www.chalearn.org/\">ChaLearn</a></li>\n",
+    "  </ul>\n",
+    "  </p>\n",
+    "</details> \n",
+    "\n",
+    "<details open> \n",
+    "<summary>Collaborators</summary>\n",
+    "  <p>\n",
+    "This challenge was organized by <b>Team Fairness National Assembly</b> of <b><a style='color:#4D6605;' href='http://www.chalearn.org/'>ChaLearn</a></b> at <b><a style='color: #62023C;' href='https://www.universite-paris-saclay.fr/'>Université Paris Saclay</a></b>\n",
+    "  </p>\n",
+    "</details> \n",
+    "</div>\n",
+    "<hr>\n",
+    "\n",
+    "<center>\n",
+    "<button type=\"button\" ><h3><a href=\"https://www.codabench.org/competitions/601/\" style=\"color:red;\">Competition Site</a></h3></button> \n",
+    "<button type=\"button\"><h3><a href=\"mailto:fna@chalearn.org\">Contact us</a></h3></button>\n",
+    "</center>\n",
+    "<hr>\n",
+    "</div>"
    ]
   },
   {
@@ -1389,12 +1411,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Metrics\n",
+    "\n",
+    "We denote $a_i$ as the accuracy of group $i$ with $i=1,2,...,9$.\n",
+    "\n",
+    "**Arithmetic mean accuracy (AM)**: The arithmetic mean is computed as:\n",
+    "\n",
+    "$AM = \\frac{1}{n} \\sum_{i=1}^{n} a_i$\n",
+    "\n",
+    "This well-known metric is widely used to evaluate machine learning models, simply computing the weighted average of the accuracy of each group.\n",
+    "\n",
+    "**Geometric mean accuracy (GM)**: The geometric mean accuracy is computed as:\n",
+    "\n",
+    "$GM = {(\\prod_{i=1}^{n} a_i)}^{1/n}$\n",
+    "\n",
+    "The accuracy of each group is computed by calculating the geometric mean of the accuracy of each group. With low accuracy groups, this metric penalizes the final score harder than the conventional arithmetic mean. This metric is used to encourage participants to fight the bias inserted in the data and create models that are consistent.\n",
+    "\n",
+    "**Worst group accuracy (WGA)**: The worst group accuracy is computed as:\n",
+    "\n",
+    "$WGA = \\min{(a_i)}$\n",
+    "\n",
+    "The worst group accuracy metric simply considers the lowest accuracy among all groups. It is a very harsh metric that penalizes even more than the previous two."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Scoring the results\n",
+    "\n",
+    "\n",
     "### Load the challenge metric\n",
     "\n",
     "**The metric chosen for your challenge** is identified in the \"metric.txt\" file found in the `scoring_program/` directory.\n",
     "<br> \n",
     "The function \"get_metric\" searches first for a metric having that name in my_metric.py, then in libscores.py, then in sklearn.metric.\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "Currently, we are using geometric_mean_accuracy_metric, which is calculated by:\n",
     "- Split the data in 9 groups, where images in each group have the same style and category\n",
