--- a/README.ipynb
+++ b/README.ipynb
@@ -11,10 +11,13 @@
     "<h1>Starting Kit // <b>Style-Trans-Fair</b> </h1>\n",
     "<p>\n",
     "This starting kit will guide you step by step and will walk you through the data statistics and examples. This will give you a clear idea of what this challenge is about and how you can proceed further to solve the challenge.\n",
+    "\n",
+    "### You can also use the starting kit on **[Google Colab](https://colab.research.google.com/drive/1EFnbPXCqLZ3J---5kDGQk893a2Hk-dFb?usp=sharing)**\n",
     "</p> \n",
     "</div>\n",
     "<div>\n",
-    "<br/><br/>\n",
+    "\n",
+    "\n",
     "<details>\n",
     "<summary>Technical Details</summary>\n",
     "<p>\n",
